# ronbun

./: .gitignore  README.md
.claude/: CLAUDE.md
AgentHospital/: Q&A第一弾.md  不明点.md  実装検討.txt
AgentHospital/Qiita投稿/: part0.html  part0.md  part1.html  part1.md  part2.html  part2.md  qiita投稿検討.md
AgentHospital/impl/: .env.example  .gitignore  README.md  pyproject.toml
AgentHospital/impl/docs/: data-design.md
AgentHospital/impl/scripts/: seed_patients.py
AgentHospital/impl/skills/global-lessons/: SKILL.md
AgentHospital/impl/skills/global-lessons/scripts/: read_global_lessons.py  update_global_lessons.py
AgentHospital/impl/skills/patient-record/: SKILL.md
AgentHospital/impl/skills/patient-record/scripts/: write_patient_record.py
AgentHospital/impl/src/agent_hospital/: config.py  graph.py  llm.py  main.py  state.py
AgentHospital/impl/src/agent_hospital/memory/: __init__.py  lessons.py  patients.py  sessions.py
AgentHospital/impl/src/agent_hospital/nodes/: function_node.py  interview.py  patient_env.py  pre_consult.py  reflection.py  text_utils.py
AgentHospital/impl/src/agent_hospital/schemas/: __init__.py  patient.py
AgentHospital/impl/storage/patients/: manifest.json  patient_001.json  patient_002.json  patient_003.json  patient_004.json  patient_005.json  patient_006.json  patient_007.json  patient_008.json  patient_009.json  patient_010.json  patient_011.json  patient_012.json  patient_013.json  patient_014.json  patient_015.json  patient_016.json  patient_017.json  patient_018.json  patient_019.json  patient_020.json
