[project]
name = "agent-hospital"
version = "0.1.0"
description = "Agent Hospital 小規模再現（Strands + GraphBuilder）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "strands-agents[openai]>=1.45.0",
    "strands-agents-tools>=0.8.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
agent-hospital = "agent_hospital.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
